Compatible with older java version